--- a/style.css
+++ b/style.css
@@ -12,6 +12,22 @@ body {
     height: 100dvh;
 }
 
+.loadingContent {
+    background-color: rgb(0, 0, 0, 0.5);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loadingContent label {
+    font-size: 30px;
+    font-weight: bold;
+
+}
+
 .content {
     display: flex;
     flex-direction: column;
